# StatArbX

./: LICENSE  README.md  demo_run.py  pyproject.toml  requirements.txt  test_simple.py
scripts/: run_backtest.py
src/statarbx/: __init__.py  backtester.py  cointegration.py  config.py  data.py  metrics.py  strategy.py
tests/: __init__.py  test_data.py  test_integration.py  test_metrics.py
